'pthファイルにチェックポイントを保存'

--- a/.test/test_unet.ipynb
+++ b/.test/test_unet.ipynb
@@ -66,7 +66,8 @@
     "    device=torch.device('cuda'),  # GPUを明示的に指定\n",
     "    precompute_gt=True,  # 事前計算を有効化\n",
     "    # num_workers=None\n",
-    "    transform=transform  # 画像変換を追加\n",
+    "    transform=transform,  # 画像変換を追加\n",
+    "    target_width=300\n",
     ")\n",
     "test_dataset = PreTrainDataset(\n",
     "    input_path='../../kuzushiji-recognition/synthetic_images/input_images/',\n",
@@ -76,7 +77,8 @@
     "    device=torch.device('cuda'),  # GPUを明示的に指定\n",
     "    precompute_gt=True,  # 事前計算を有効化\n",
     "    # num_workers=4\n",
-    "    transform=transform  # 画像変換を追加\n",
+    "    transform=transform,  # 画像変換を追加\n",
+    "    targetwidth=300\n",
     ")\n",
     "\n",
     "# 最適化されたDataLoaderの作成\n",
@@ -91,8 +93,27 @@
     "criterion = nn.MSELoss() # 回帰問題なのでMSE損失を使用\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
     "\n",
-    "# --- 学習ループの拡張 ---\n",
+    "# --- チェックポイントの設定 ---\n",
+    "checkpoint_dir = \"../checkpoints\"\n",
+    "os.makedirs(checkpoint_dir, exist_ok=True)\n",
     "\n",
+    "# 最良のモデルを追跡するための変数\n",
+    "best_test_loss = float('inf')\n",
+    "start_epoch = 0\n",
+    "\n",
+    "# チェックポイントの読み込み（存在する場合）\n",
+    "checkpoint_path = os.path.join(checkpoint_dir, \"latest_checkpoint.pth\")\n",
+    "if os.path.exists(checkpoint_path):\n",
+    "    checkpoint = torch.load(checkpoint_path)\n",
+    "    model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "    optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
+    "    start_epoch = checkpoint['epoch']\n",
+    "    best_test_loss = checkpoint['best_test_loss']\n",
+    "    train_loss_history = checkpoint['train_loss_history']\n",
+    "    test_loss_history = checkpoint['test_loss_history']\n",
+    "    print(f\"チェックポイントを読み込みました（エポック {start_epoch}）\")\n",
+    "\n",
+    "print(\"学習を開始します...\")\n",
     "num_epochs = 100 # エポック数を定義\n",
     "\n",
     "# 損失の履歴を保存するリストを初期化\n",
@@ -100,7 +121,7 @@
     "test_loss_history = []\n",
     "\n",
     "print(\"学習を開始します...\")\n",
-    "for epoch in range(num_epochs):\n",
+    "for epoch in range(start_epoch, num_epochs):\n",
     "    print(f'start epcoch')\n",
     "    # --- 訓練フェーズ ---\n",
     "    model.train() # モデルを訓練モードに設定\n",
@@ -148,6 +169,27 @@
     "    \n",
     "    # 各エポックの最後に訓練ロスとテストロスを表示\n",
     "    print(f\"Epoch {epoch+1}/{num_epochs} | Train Loss: {avg_train_loss:.4f} | Test Loss: {avg_test_loss:.4f}\")\n",
+    "    \n",
+    "    # 最新のチェックポイントを保存\n",
+    "    torch.save({\n",
+    "        'epoch': epoch + 1,\n",
+    "        'model_state_dict': model.state_dict(),\n",
+    "        'optimizer_state_dict': optimizer.state_dict(),\n",
+    "        'train_loss_history': train_loss_history,\n",
+    "        'test_loss_history': test_loss_history,\n",
+    "        'best_test_loss': best_test_loss\n",
+    "    }, os.path.join(checkpoint_dir, \"latest_checkpoint.pth\"))\n",
+    "    \n",
+    "    # より良い性能が出た場合、ベストモデルとして保存\n",
+    "    if avg_test_loss < best_test_loss:\n",
+    "        best_test_loss = avg_test_loss\n",
+    "        torch.save({\n",
+    "            'epoch': epoch + 1,\n",
+    "            'model_state_dict': model.state_dict(),\n",
+    "            'optimizer_state_dict': optimizer.state_dict(),\n",
+    "            'test_loss': avg_test_loss,\n",
+    "        }, os.path.join(checkpoint_dir, \"best_model.pth\"))\n",
+    "        print(f\"新しいベストモデルを保存しました（Test Loss: {avg_test_loss:.4f}）\")\n",
     "\n",
     "print(\"学習が完了しました。\")\n",
     "\n",
