--- a/test/Yolo_trial/Yolo_trial.ipynb
+++ b/test/Yolo_trial/Yolo_trial.ipynb
@@ -10,17 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "78ec69f2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "image 1/1 /Users/riku/00_myprograms/Craft_respect/test/Yolo_trial/../../.image_data/100241706_00002_2.jpg: 640x416 (no detections), 91.7ms\n",
-      "Speed: 2.5ms preprocess, 91.7ms inference, 0.4ms postprocess per image at shape (1, 3, 640, 416)\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ultralytics'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01multralytics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m YOLO\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# YOLOv8の学習済みモデルをロード\u001b[39;00m\n\u001b[0;32m      4\u001b[0m model \u001b[38;5;241m=\u001b[39m YOLO(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124myolov8n.pt\u001b[39m\u001b[38;5;124m'\u001b[39m)  \u001b[38;5;66;03m# 'n'はnanoモデルの意味。他にもs, m, l, xなどがあります。\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'ultralytics'"
      ]
     }
    ],
@@ -190,7 +192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch_env",
+   "display_name": "kuzushiji",
    "language": "python",
    "name": "python3"
   },
@@ -204,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
