--- a/test/test_unet.ipynb
+++ b/test/test_unet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e1312834",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,8 @@
     "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
     "if project_root not in sys.path:\n",
     "    sys.path.append(project_root)\n",
-    "from src.my_app import UNet, PreTrainDataset, create_optimized_dataloader\n",
+    "# from src.my_app import UNet, PreTrainDataset, create_optimized_dataloader\n",
+    "from src.my_app import DeepUNet, PreTrainDataset, create_optimized_dataloader\n",
     "import torch\n",
     "from PIL import Image\n",
     "import torchvision.transforms as transforms\n",
@@ -1969,7 +1970,7 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n",
     "# device = torch.device(\"mps\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model = UNet(3, 4).to(device)\n",
+    "model = DeepUNet(3, 4).to(device)\n",
     "criterion = nn.MSELoss() # 回帰問題なのでMSE損失を使用\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
     "\n",
@@ -4489,7 +4490,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kuzushiji",
+   "display_name": "torch_env",
    "language": "python",
    "name": "python3"
   },
@@ -4503,7 +4504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
